// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p6-waiting renders 1`] = `
<p6-waiting>
  <!---->
  <p6-spinner></p6-spinner>
</p6-waiting>
`;

exports[`p6-waiting with message 1`] = `
<p6-waiting>
  <!---->
  <p6-spinner></p6-spinner>
  Loading in progress
</p6-waiting>
`;
